--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <script src="https://mannymeadows.github.io/Noosa/aframe-extras.js"></script>
     <script src="https://rawgit.com/andreasplesch/aframe-crease-component/master/dist/aframe-crease-component.min.js"></script>
 
-    <script src="https://rawgit.com/ngokevin/kframe/0.3.0/dist/k-frame.min.js"></script>
+    <!-- <script src="https://rawgit.com/ngokevin/kframe/0.3.0/dist/k-frame.min.js"></script> -->
     <script src="https://rawgit.com/gmarty/aframe-ui-components/master/dist/aframe-ui-components.min.js"></script>
     <script src="https://rawgit.com/IdeaSpaceVR/aframe-ui-modal-component/master/dist/aframe-ui-modal-component.min.js"></script>
     <script src="https://rawgit.com/blairmacintyre/aframe-look-at-billboard-component/master/dist/aframe-look-at-billboard-component.min.js"></script>
@@ -28,7 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
 
     <script src="../client/index.js"></script>
-    <script src="./testVK.js"></script>
+
 
   </head>
   <body>
@@ -62,7 +62,6 @@
           wasd-controls>
           <a-entity
             cursor="fuse: true; fuseTimeout: 500"
-            raycaster="far: 20; interval: 1000; objects:; recursive: true"
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
             material="color: #f4b342; shader: flat">
@@ -447,156 +446,26 @@
 <!--    Floor    -->
       <a-plane id="floor" height="30" width="30" rotation="-90 0 0" color="grey" shadow="cast: false"></a-plane>
 
-<!--   ceiling      -->
-      <a-box id="ceiling" depth="7.6" height="0.5" width="30" position="0 3.4 1.3" color="#efd6a2" shadow="cast: false"></a-box>
 
-<!--   back walls      -->
-      <a-box id="back-wall-lower" depth="0.2" height="3" width="30" position="0 1 -3.2" rotation="15 0 0" color="#efd6a2" shadow=""></a-box>
-      <a-box id="back-wall-upper" depth="0.2" height="2" width="30" position="0 4 -2.396" rotation="15 0 0" color="#efd6a2" shadow=""></a-box>
-
-<!--   side walls  left    -->
-      <a-box id="side-wall-left-back" depth="1.7" height="3.2" width="0.5" position="-2.6 1.6 -1.83" color="#efd6a2" shadow=""></a-box>
-      <a-box id="side-wall-left-angle" depth="1" height="4" width="0.5" position="-2.6 1.6 -2.623" color="#efd6a2" rotation="15 0 0" shadow=""></a-box>
-      <a-box id="side-wall-left" depth="4" height="2" width="0.2" position="-2.6 1 1" color="#efd6a2" shadow="cast: false"></a-box>
-
-<!--   side walls  right    -->
-      <a-box id="side-wall-right-back" depth="1.7" height="3.2" width="0.5" position="2.6 1.6 -1.83" color="#efd6a2" shadow=""></a-box>
-      <a-box id="side-wall-right-angle" depth="1" height="4" width="0.5" position="2.6 1.6 -2.623" color="#efd6a2" rotation="15 0 0" shadow=""></a-box>
-      <a-box id="side-wall-right" depth="4" height="2" width="0.2" position="2.6 1 1" color="#efd6a2" shadow=""></a-box>
-
-<!--   side walls  lextended    -->
-      <a-box depth="1.7" height="3.2" width="0.5" position="6.2 1.6 -1.83" color="#efd6a2"></a-box>
-      <a-box depth="1" height="4" width="0.5" position="6.2 1.6 -2.623" color="#efd6a2" rotation="15 0 0"></a-box>
-      <a-box depth="4" height="2" width="0.2" position="6.2 1 1" color="#efd6a2"></a-box>
-
-      <a-box depth="1.7" height="3.2" width="0.5" position="-6.2 1.6 -1.83" color="#efd6a2"></a-box>
-      <a-box depth="1" height="4" width="0.5" position="-6.2 1.6 -2.623" color="#efd6a2" rotation="15 0 0"></a-box>
-      <a-box depth="4" height="2" width="0.2" position="-6.2 1 1" color="#efd6a2"></a-box>
-
-<!--   filing cabinet     -->
-      <a-entity id="filing"
-        position="0 0.37 0"
-        geometry="depth: 0.9; height: 1; width: 1.2"
-        material="color: #676971; roughness: 0.6"
-        shadow="">
-      </a-entity>
-      <a-entity id="typewriter"
-        position="0 1 0"
-        geometry="depth: 0.5; height: 0.27; width: 0.81"
-        material="color: #666667; metalness: 0.45; roughness: 0.59"
-        shadow="">
-      </a-entity>
-
-<!-- Tables -->
-      <a-entity id="table-1" position="-0.5 0.37 1.5" geometry="depth: 1.2; height: 0.75; width: 0.9" material="color: #bab4a7; roughness: 0.6" shadow=""></a-entity>
-      <a-entity id="table-2" position="0.5 0.37 1.5" geometry="depth: 1.2; height: 0.75; width: 0.9" material="color: #bab4a7; roughness: 0.6" shadow=""></a-entity>
-
-<!--  Fan  -->
-      <a-entity id="fan-parent" position="0 1.85 1.54" shadow="">
-        <a-entity>
-          <a-entity id="fan-blade-1"
-            position="0 0 -0.6"
-            rotation="4 180 10"
-            geometry="height: 0.01; width: 0.055"
-            material="color: #5b4e38; roughness: 0">
-          </a-entity>
-
-          <a-entity id="fan-blade-2"
-            position="0 0 0.6"
-            rotation="4 0 1"
-            geometry="height: 0.01; width: 0.055"
-            material="color: #5b4e38; roughness: 0">
-          </a-entity>
-
-          <a-entity id="fan-blade-3"
-            position="0.6 0 0"
-            rotation="4 90 10"
-            geometry="height: 0.01; width: 0.055"
-            material="color: #5b4e38; roughness: 0">
-          </a-entity>
-
-          <a-entity id="fan-blade-4"
-            position="-0.6 0 0"
-            rotation="4 -90 10"
-            geometry="height: 0.01; width: 0.055"
-            material="color: #5b4e38; roughness: 0">
-          </a-entity>
-
-          <a-animation attribute="rotation"
-            dur="5000"
-            easing="linear"
-            fill="forwards"
-            to="0 360 0"
-            repeat="indefinite">
-          </a-animation>
-        </a-entity>
-      </a-entity>
-
-      <a-entity id="fan-parent-static" position="0 3.24 0" shadow="">
-        <a-entity id="fan-housing"
-            position="0 -1.28 1.54"
-            geometry="primitive: cylinder; height: 0.1; radius: 0.16"
-            material="color: #ab8c42; metalness: 0.8; roughness: 0.46">
-        </a-entity>
-
-        <a-entity id="fan-housing-lower"
-            position="0 -1.355 1.54"
-            geometry="primitive: cylinder; height: 0.06; radius: 0.08"
-            material="color: #ab8c42; metalness: 0.8; roughness: 0.46">
-        </a-entity>
-
-        <a-entity id="fan-attach" position="0 -0.5 1.54"
-          geometry="primitive: cylinder; height: 1.5;radius: 0.02"
-          material="color: #ab8c42; metalness: 0.8; roughness: 0.46">
-        </a-entity>
-      </a-entity>
-
-<!--   Lights     -->
-      <a-entity light="color: #9ebbc1; groundColor: #819296; intensity: 0.02; type: ambient"></a-entity>
-      <!-- <a-entity id="amb-light-left"
-        position="-12 5 5"
-        light="type: directional; intensity: 0.2; castShadow: true">
-      </a-entity>
-      <a-entity id="amb-light-right"
-        position="12 5 5"
-        light="type: directional; intensity: 0.2; castShadow: true">
-      </a-entity>
-
-      <a-entity id="amb-light-back"
-        position="5 7 -12"
-        light="color: #4e99a3; groundColor: #ffda99; type: point; castShadow: true">
-      </a-entity>
-      <a-entity id="amb-back-dir"
-        position="2.7 3.55 -8"
-        light="color: #abbc9a; groundColor: #ffda99; castShadow: true; shadowCameraFar: 500.69; shadowCameraFov: 90.93; shadowCameraRight: 7.99; shadowCameraBottom: -2; shadowCameraLeft: -8">
-      </a-entity> -->
-<!-- Exterior -->
-      <a-plane id="sky-plane"
-        position="0 2.6 -2.98"
-        rotation="15 0 0"
-        light="color: #abbc9a; groundColor: #7ebbff; intensity: 0.2; castShadow: true"
-        geometry="primitive: plane; height: 3; width: 30"
-        material="shader: flat; color: #D6D4BB">
-      </a-plane>
       <a-sky color="black" position="" rotation="" scale="" visible="" material="" geometry=""></a-sky>
 <!-- ==============  Temporary  ============== -->
       <a-entity id="temp-light-amb" light="color: #9ebbc1; groundColor: #819296; intensity: 1; type: ambient"></a-entity>
-
+      <a-box position="0.5 0.5 0.5" height="0.5" width="0.5" depth="0.5" color="orangered" choose></a-box>
 
       <!-- Quiz Test -->
-      <a-entity id="a-quiz"  position="1.07 1.23 4" > <!-- class="lead quiz-1" -->
-        <a-entity id="a-content" value=""></a-entity>
+      <!-- <a-entity id="a-quiz"  position="1.07 1.23 4" >-->  <!-- class="lead quiz-1" -->
+        <!-- <a-entity id="a-content" value=""></a-entity>
         <a-text id="a-questionContainer" value=""></a-text>
         <a-text id="a-choicesContainer" value=""></a-text>
         <a-entity id="a-next-btn">
           <a-box id="a-submitBtn" color="tomato" depth="0.1" height="0.1" width="0.1" rotation="0 -90 0"></a-box>
           <a-text value="Next Question" rotation="0 -90 0"></a-text>
         </a-entity>
-      </a-entity>
+      </a-entity> -->
 
     </a-scene>
 <!-- hiddden test -->
-    <div>
+    <!-- <div>
       <div class="test">
 
         <div id="quiz" class="lead quiz-1">
@@ -610,7 +479,7 @@
       <div id="next-btn">
         <input type="button" id="submitBtn" value="Next Question" />
       </div>
-    </div>
-
+    </div> -->
+    <script src="./testVK.js"></script>
   </body>
 </html>
