--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,58 @@
         <a-mixin id="popup-img" position="0 0 0" billboard></a-mixin>
         <a-mixin id="popup-text" position="0 0.7 0" text="value: Placeholder Text Placeholder Text Placeholder Text;" billboard></a-mixin>
         <a-mixin id="popup-video" position="0 0.2 -0.5" billboard></a-mixin>
+
+        <a-mixin id="vk-questions"
+          position="0 0.8"
+          geometry="primitive: plane; height: 1; width: 3"
+          material="side: double; color: #B8D8D8; opacity: 0.7">
+        </a-mixin>
+
+        <a-mixin id="vk-choices-geo"
+          geometry="primitive: plane; height: auto; width: 2.5"
+        </a-mixin>
+        <a-mixin id="vk-choices-mat"
+          material="side: double; color: #7A9E9F; opacity: 0.5">
+        </a-mixin>
+        <a-mixin id="vk-choices-selected"
+          material="side: double; color: #FE5F55; opacity: 0.5">
+        </a-mixin>
+        <!-- <a-mixin id=""></a-mixin> -->
       </a-assets>
+
+
+      <a-entity id="quiz-container" position="1.7 2.7 -1.5">
+        <!-- <a-entity id="question-container"
+          position="0 0.8"
+          geometry="primitive: plane; height: 1; width: 2"
+          material="side: double; color: #89c2c6; opacity: 0.7">
+
+        </a-entity>
+
+        <a-entity id="choice-1-container"
+          position="0.35  0.03 0"
+          geometry="primitive: plane; height: 0.3; width: 1.2"
+          material="side: double; color: #89c2c6; opacity: 0.6">
+        </a-entity>
+
+        <a-entity id="choice-2-container"
+          position="0.35 -0.5 0"
+          geometry="primitive: plane; height: 0.3; width: 1.2"
+          material="side: double; color: #89c2c6; opacity: 0.5">
+        </a-entity>
+
+        <a-entity id="choice-3-container"
+          position="0.35 -1.03 0"
+          geometry="primitive: plane; height: 0.3; width: 1.2"
+          material="side: double; color: #89c2c6; opacity: 0.4">
+        </a-entity> -->
+        <a-entity id="next-question"
+          position="1.1 -0.76 0"
+          rotation="0 0 -90"
+          geometry="primitive: cone; height: 0.25; radiusBottom: 0.1; radiusTop: 0"
+          material="color: white">
+        </a-entity>
+      </a-entity>
 
       <!-- Camera -->
       <a-entity position="0 0 3.8">
