--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
 
       <a-entity id="quiz-container" position="1.7 2.7 -1.5">
         <a-entity id="next-question"
+          next
           position="1.1 -0.76 0"
           rotation="0 0 -90"
           geometry="primitive: cone; height: 0.25; radiusBottom: 0.1; radiusTop: 0"
