answer now has value to store in object

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         </a-mixin>
 
         <a-mixin id="vk-choices-geo"
-          geometry="primitive: plane; height: auto; width: 2.5"
+          geometry="primitive: plane; height: auto; width: 2.5">
         </a-mixin>
         <a-mixin id="vk-choices-mat"
           material="side: double; color: #7A9E9F; opacity: 0.5">
