--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,8 @@
         position="1.7 2.7 -1.5"
         take-quiz=""
         visible="true"
-        geometry="primitive: plane; width: auto; height: auto"
-        material="color: blue"
+        geometry="primitive: plane; width: 4; height: 1"
+        material="color: purple"
         text="value: Take the Voight-Kampff Test; color: white; width: auto; align: center; anchor: center; opacity: 1; wrapCount: 30">
       </a-entity>
 
@@ -91,6 +91,25 @@
         rotation="0 0 -90"
         geometry="primitive: cone; height: 0.25; radiusBottom: 0.1; radiusTop: 0"
         material="color: white">
+      </a-entity>
+
+      <a-entity id="quiz-result"
+        position="1.7 2.7 -1.5"
+        quiz-result=""
+        visible="false"> <!-- Change to true on completion -->
+        <a-entity
+          position="0 0.5 0"
+          geometry="primitive: plane; width: 4; height: 1"
+          material="color: blue"
+          text="color: white; width: auto; align: center; anchor: center; opacity: 1; wrapCount: 30; value: Your Results">
+        </a-entity>
+
+        <a-entity id="result-text"
+          position="0 -0.5 0"
+          geometry="primitive: plane; width: 4; height: 1"
+          material="color: red">
+          <!-- Insert test result text here: value="" -->
+        </a-entity>
       </a-entity>
 
       <!-- Camera -->
