--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         </a-mixin>
 
         <a-mixin id="vk-choices-geo"
-          geometry="primitive: plane; height: auto; width: 2.5">
+          geometry="primitive: plane; height: auto; width: auto">
         </a-mixin>
         <a-mixin id="vk-choices-mat"
           material="side: double; color: #7A9E9F; opacity: 0.5">
@@ -148,7 +148,7 @@
 
 <!-- OBJECTS -->
       <!-- <a-entity obj-model="obj: #akira-obj; mtl: #akira-mtl"></a-entity> -->
-      <a-entity geometry="primitive: box" scale="0.5 2 0.5" rotation="0 22d 0" position="0 2 -4" draw="width: 128; height: 512;" htmltexture="asset: #popup"></a-entity>
+      <!-- <a-entity geometry="primitive: box" scale="0.5 2 0.5" rotation="0 22d 0" position="0 2 -4" draw="width: 128; height: 512;" htmltexture="asset: #popup"></a-entity>
 
       <a-entity class="object-selectable" id="akira" position="-0.85 0.8 1">
         <a-entity id="akira-obj" spotlight
@@ -444,7 +444,7 @@
             fill="both">
           </a-animation>
         </a-entity>
-      </a-entity>
+      </a-entity> -->
 
 
 <!-- Person Reference -->
