--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
           material="side: double; color: #FE5F55; opacity: 0.5">
         </a-mixin>
 
+         <a-asset-item id="set-obj" src="./assets/models/vk-set.obj"></a-asset-item>
+
       </a-assets>
 
       <!-- Quiz -->
@@ -111,6 +113,9 @@
           <!-- Insert test result text here: value="" -->
         </a-entity>
       </a-entity>
+
+      <!-- Set -->
+      <a-entity obj-model="obj: #set-obj"></a-entity>
 
       <!-- Camera -->
       <a-entity position="0 0 3.8">
