--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,12 @@
       </a-entity>
 
       <!-- Set -->
-      <a-entity obj-model="obj: #set-obj"></a-entity>
+      <a-entity
+        obj-model="obj: #set-obj"
+        rotation="-90 0 180"
+        scale="0.01 0.01 0.01"
+        material="color: blue">
+      </a-entity>
 
       <!-- Camera -->
       <a-entity position="0 0 3.8">
